# fasted

./: 404.html  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml
api-selfdependent/: index.html
api-typing/: index.html
docs/: api-selfdependent.md  api-typing.md  index.md
fasted/: __init__.py  idmemo.py  selfdependent.py  typing.py  utils.py
search/: search_index.json
tests/: test_selfdependent.py
